@@ -1,3 +1,13 @@
+Wed Nov 24 14:50:32 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/idl:
+        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
+          Compile ccm_dds.idl as part of the build
+
+        * connectors/dds4ccm/idl/ccm_ddsC.h:
+        * connectors/dds4ccm/idl/ccm_ddsS.h:
+          Removed these files, now generated as part of the build
+
 Wed Nov 24 13:59:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
